# SynthApp

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  launch.sh  synthapp-g2
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/engine/: Arpeggiator.cpp  Arpeggiator.h  AudioEngine.cpp  AudioEngine.h  Module.h  ModuleGraph.cpp  ModuleGraph.h  NoteEvent.h  Sequencer.cpp  Sequencer.h  SlotManager.cpp  SlotManager.h  VoicePool.cpp  VoicePool.h
src/modules/: ModuleRegistry.cpp  ModuleRegistry.h
src/modules/effects/: FxChorus.cpp  FxChorus.h  FxCompressor.cpp  FxCompressor.h  FxDelay.cpp  FxDelay.h  FxDistort.cpp  FxDistort.h  FxEQ.cpp  FxEQ.h  FxReverb.cpp  FxReverb.h
src/modules/envelopes/: EnvAD.cpp  EnvAD.h  EnvADSR.cpp  EnvADSR.h  EnvFollow.cpp  EnvFollow.h
src/modules/filters/: FltLP.cpp  FltLP.h  FltNord.cpp  FltNord.h  FltPhase.cpp  FltPhase.h  FltVoice.cpp  FltVoice.h
src/modules/lfos/: LfoA.cpp  LfoA.h  LfoB.cpp  LfoB.h
src/modules/midi/: KeyAfter.cpp  KeyAfter.h  KeyNote.cpp  KeyNote.h  KeyVelo.cpp  KeyVelo.h  ModWheel.cpp  ModWheel.h  PitchBnd.cpp  PitchBnd.h
src/modules/mixers/: Mix4to1.cpp  Mix4to1.h  Mix8to1.cpp  Mix8to1.h  Out.cpp  Out.h  Pan.cpp  Pan.h  VCA.cpp  VCA.h
src/modules/oscillators/: Noise.cpp  Noise.h  OscA.cpp  OscA.h  OscB.cpp  OscB.h  OscC.cpp  OscC.h  OscD.cpp  OscD.h
src/modules/sequencers/: ClkDiv.cpp  ClkDiv.h  ClkGen.cpp  ClkGen.h  SeqCtrl.cpp  SeqCtrl.h  SeqNote.cpp  SeqNote.h
src/patch/: CableSystem.cpp  CableSystem.h  PatchFormat.cpp  PatchFormat.h
src/ui/: CableView.cpp  CableView.h  KeyboardView.cpp  KeyboardView.h  KnobView.cpp  KnobView.h  ModuleView.cpp  ModuleView.h  PanelView.cpp  PanelView.h  PortView.cpp  PortView.h  PresetManager.cpp  PresetManager.h  SequencerView.cpp  SequencerView.h  SimplePanelView.cpp  SimplePanelView.h  SlotTabView.cpp  SlotTabView.h
tests/: test_effects.cpp  test_envelope_timing.cpp  test_filter_response.cpp  test_graph_topo.cpp  test_osc_aliasing.cpp  test_patch_format.cpp  test_sequencers.cpp
tools/: pch2_to_json.py
